syntax = "proto3";

package pb;

import "user.proto";

option go_package = "/pb";

message UpdateUserRequest {
  int64 id = 1;
  optional string password = 2;
  optional string full_name = 3;
  optional string email = 4;
}

message UpdateUserResponse {
  User user = 1;
}
